crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__fall_off_end_of_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/fall_off_end_of_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (expr (+ 42.0 27.0))))
   (print (call +4 (global f @3))))

----- stderr -----
