crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__function_call_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/function_call_parameters.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [(local a @0) (local b @1)] []
      (block
         (print (local b @1))
         (print (local a @0))))
   (expr (call +4 (global f @3) 42.0 27.0)))

----- stderr -----
