crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__gc_hole_in_stack_layout.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/gc_hole_in_stack_layout.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (fun g (local @0) [] []
            (block))))
   (fun g (global @4) [] [None]
      (block
         (fun in_cell (cell @0) [] [Some(0)]
            (block
               (expr (cell in_cell @0))))
         (var a (local @0) 42.0)
         (expr (call +1 (global f @3)))))
   (expr (call +5 (global f @3)))
   (expr (call +5 (global g @4)))
   (print "ok"))

----- stderr -----
