crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__test_nan_slow_path.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/test_nan_slow_path.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var nan (global @1) (/ 0.0 0.0))
   (print (+ (global nan @1) (global nan @1)))
   (print (- (global nan @1) (global nan @1)))
   (print (* (global nan @1) (global nan @1)))
   (print (/ (global nan @1) (global nan @1)))
   (print (** (global nan @1) (global nan @1)))
   (print (< (global nan @1) (global nan @1)))
   (print (<= (global nan @1) (global nan @1)))
   (print (> (global nan @1) (global nan @1)))
   (print (>= (global nan @1) (global nan @1)))
   (print (== (global nan @1) (global nan @1)))
   (print (!= (global nan @1) (global nan @1))))

----- stderr -----
